<resources>
    <string name="app_name">ABC Cricket Academy</string>
    <string name="academy_name">ABC Cricket Academy</string>
    <string name="website">www.abccricket.com</string>
    <string name="Add_Button">Add New Player</string>
    <string name="Update_delete_Button">Update/Delete Players</string>
    <string name="View_Button">View Players</string>
    <string name="add_player_heading">Enter Player Details</string>
    <string name="update_delete_player_heading">Update/Delete Player</string>
    <string name="view_player_heading">Player Details</string>
    <string name="View_all_Button">View all Players</string>
    <string name="View_individual_button">View_individual_player</string>
    <string name="add_player_button">Add Player</string>
    <string name="personal_details">Personal Details</string>
    <string name="Player_Id">Player ID(3 Digits)</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="age">Age</string>
    <string name="height">Height(In Feet)</string>
    <string name="weight">Weight(In KGs)</string>
    <string name="skill">Skill</string>
    <string name="address">Address</string>
    <string name="h_no">House No</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="contact">Contact</string>
    <string name="academy_id">Academy Id</string>
    <string name="academy_id_id">123</string>
    <string name="coach_id">Coach Id(3 Digits)</string>
    <string name="team_id">Team Id(3 Digits)</string>
    <string name="epid">Enter Player Id here</string>
    <string name="gpd">Get Details</string>
    <string name="logo">logo</string>
    <string name="update_button">Update Player</string>
    <string name="delete_button">Delete Player</string>


</resources>