<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_view_player">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/player_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/Player_Id"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/First_Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/l_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/Last_Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/dob"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/height"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/weight"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/skill"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/h_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/h_no"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/street"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/city"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/zip_code"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/academy_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/academy_id"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/coach_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/coach_id"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/team_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:hint="@string/team_id"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/Buttons"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/title_bar"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/view_player_heading"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08071136" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8508892" />

    <Button
        android:id="@+id/add_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delete_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <Button
        android:id="@+id/add_player_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/update_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="132dp" />

    <Button
        android:id="@+id/gpd_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/gpd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95212036" />

    <EditText
        android:id="@+id/search"
        android:layout_width="268dp"
        android:layout_height="47dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/epid"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="289dp" />

</androidx.constraintlayout.widget.ConstraintLayout>